{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 66,
  "lineage": "1395216c-0c00-d7f6-ab78-c599fc35ca0e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:906097692445:loadbalancer/terraform-elb",
            "availability_zones": [
              "us-east-1a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "terraform-elb-1038503239.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8000/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terraform-elb",
            "idle_timeout": 400,
            "internal": false,
            "listener": [
              {
                "instance_port": 8000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terraform-elb",
            "security_groups": [
              "sg-0a0d4aa701e989b1b"
            ],
            "source_security_group": "906097692445/default_elb_69616f67-6ad5-39b4-a501-3f163e6fb11d",
            "source_security_group_id": "sg-0a0d4aa701e989b1b",
            "subnets": [
              "subnet-5fe0567e"
            ],
            "tags": {
              "Name": "terraform-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0947d2ba12ee1ff75",
            "arn": "arn:aws:ec2:us-east-1:906097692445:instance/i-08bfe5582d5bf43f9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08bfe5582d5bf43f9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aug2020",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e3acc3ddc26be5e2",
            "private_dns": "ip-172-31-41-117.ec2.internal",
            "private_ip": "172.31.41.117",
            "public_dns": "ec2-34-203-222-126.compute-1.amazonaws.com",
            "public_ip": "34.203.222.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-010e62339dc03f7d8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sshsg",
              "websg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-ed18adb2",
            "tags": {
              "Name": "webappdev01",
              "backup": "no",
              "environment": "develope",
              "timetolive": "10"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01b643d62eeb61d86",
              "sg-061b44ccb0d407d24"
            ]
          },
          "dependencies": [
            "aws_security_group.sshsg",
            "aws_security_group.websg",
            "data.aws_ami.amazonlx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sshsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:906097692445:security-group/sg-01b643d62eeb61d86",
            "description": "allows ssh traffic",
            "egress": [],
            "id": "sg-01b643d62eeb61d86",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sshsg",
            "name_prefix": "",
            "owner_id": "906097692445",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sshsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-c7fe3aba"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "websg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:906097692445:security-group/sg-061b44ccb0d407d24",
            "description": "allows http traffic",
            "egress": [],
            "id": "sg-061b44ccb0d407d24",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "websg",
            "name_prefix": "",
            "owner_id": "906097692445",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "websg"
            },
            "timeouts": null,
            "vpc_id": "vpc-c7fe3aba"
          }
        }
      ]
    }
  ]
}